--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ button {
   outline: none;
   width: 200px;
   height: 50px;
+  color: #fff;
   font-family: 'Courier New', Courier, monospace;
   font-size: 20px;
   background: #ff3482;
